<resources>
    <!---signUp page-->
    <string name="app_name">ecommerce_app</string>
    <string name="signUp_header_1">Welcome to online shopping</string>
    <string name="signUp_username_hint">username</string>
    <string name="signUp_create_a_pin_hint">create a password</string>
    <string name="signUp_register_button">Register</string>
    <string name="signUp_confirm_pin_hint">confirm password</string>
    <string name="signUp_account_number_hint">email</string>
    <!---first Page-->
    <string name="first_page_header">Welcome to online shopping</string>
    <string name="first_page_login_btn">Login</string>
    <string name="first_page_signUp_btn">new user ? signUp</string>
    <!--login page-->
    <string name="login_page_password_hint">Enter your password</string>
    <string name="login_page_email_hint">user email</string>
    <string name="login_page_header">Welcome to online shopping</string>
    <!--filter page-->
    <string name="filter_smart_phones_cat">Smart Phones</string>
    <string name="filter_laptops_cat">Laptops</string>
    <string name="filter_fragrances_cat">Fragrances</string>
    <string name="filter_skincare_cat">skincare</string>
    <string name="filter_groceries_cat">groceries</string>
    <string name="filter_home_decorations_cat">home decorations</string>
    <string name="categories_heading">Categories</string>
    <string name="RecyclerView_searchView">search here</string>
    <string name="loginPage_login_btn_text">Login</string>
    <!--userProfile  page-->
    <string name="user_profile_name_tag">Name :</string>
    <string name="user_profile_emai_tag">E-mail :</string>
    <string name="user_profile_change_password_btn">change Password</string>
    <string name="user_profile_logout_btn_name">Logout</string>
    <!--productProfile  page-->
    <string name="product_profile_name_tag">Name :</string>
    <string name="product_profile_description_tag">Description :</string>
    <string name="product_profile_price_tag">Price :</string>
    <string name="product_profile_category_tag">Category :</string>
    <string name="product_profile_brand_tag">Brand :</string>
    <string name="product_profile_rating_tag">Rating :</string>
    <string name="product_profile_dicount_percentage_tag">Discount Percentage :</string>
    <string name="product_profile_stock_tag">Stock :</string>
    <!--cartProducts  page-->
    <string name="heading_cart_products">Cart products :</string>
    <string name="proceed_to_buy_cart_products">Proceed to Buy</string>
    <string name="header_change_password">Change Password</string>
    <string name="user_name_tag_change_password">user Name :</string>
    <string name="old_password_tag_change_password">old Password</string>
    <!--changePassword  page-->
    <string name="enter_old_password_editText_change_password">Enter old password</string>
    <string name="create_new_password_tag_change_password">create new password</string>
    <string name="create_a_new_password_editText_change_password">Create a new password</string>
    <string name="change_password_Btn_change_password">change Password</string>
    <string name="submit_hint_confirm_order">Submit</string>
    <!--confirmOrder  page-->
    <string name="phone_number_hint_confirm_order">Phone number</string>
    <string name="state_hint_confirm_order">State</string>
    <string name="pin_code_hint_confirm_order">pin-code</string>
    <string name="street_name_hint_confirm_order">Street-name</string>
    <string name="house_number_confirm_order">House Number</string>
    <string name="confirm_Btn_orderedplaced">Confirm</string>
    <string name="cancel_Btn_orderplaced">cancel</string>
    <!--productDesign  page-->
    <string name="productname_product_design">productName</string>
    <string name="price_tag_product_design">price</string>


</resources>