<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/layout_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/hidden_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/header_change_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hidden_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="20dp"
        android:background="@drawable/layout_background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        android:elevation="10dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/user_name_tag_change_password"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/chagePasswordUserName"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="name"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/old_password_tag_change_password"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/OldPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:hint="@string/enter_old_password_editText_change_password"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperTextTextColor="#FF0000"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="341dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_dark"
                android:inputType="textPassword"
                android:maxLength="15"
                android:padding="12dp"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="412dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/create_new_password_tag_change_password"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="italic"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:hint="@string/create_a_new_password_editText_change_password"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperTextTextColor="#FF0000"
            app:hintTextColor="@color/black"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="341dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_dark"
                android:inputType="textPassword"
                android:maxLength="15"
                android:padding="12dp"
                tools:layout_editor_absoluteX="80dp"
                tools:layout_editor_absoluteY="412dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:layout_marginBottom="618dp"
        android:background="@drawable/layout_background"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hidden_view"
        android:elevation="10dp"
        >

        <soup.neumorphism.NeumorphButton
            android:id="@+id/changePassword"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/change_password_Btn_change_password"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            app:neumorph_backgroundColor="@color/yellow"
            app:neumorph_shadowColorDark="@color/black"
            app:neumorph_shadowColorLight="@color/neo_white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>