<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <soup.neumorphism.NeumorphCardView
        style="@style/Widget.Neumorph.CardView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0.3"
        app:neumorph_shapeType="basin"
        android:layout_margin="5dp"
        app:neumorph_backgroundColor="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169"
        app:neumorph_shadowColorDark="@color/black"
        app:neumorph_shadowColorLight="@color/white"
        android:clickable="true"
        android:focusable="true"
       >

        <TextView

            android:id="@+id/firstPageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/first_page_header"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/firstPageLoginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.648"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.365" />
    </soup.neumorphism.NeumorphCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_margin="10dp"
            android:gravity="center"
            android:background="@drawable/layout_background"
            android:orientation="vertical">
               <soup.neumorphism.NeumorphButton
                   style="@style/Widget.Neumorph.Button"
                   android:id="@+id/firstPageLoginBtn"
                   android:text="@string/first_page_login_btn"
                   android:layout_width="110dp"
                   android:layout_height="70dp"
                   app:neumorph_shadowColorDark="@color/black"
                   app:neumorph_shadowColorLight="@color/neo_white"
                   android:textAlignment="center"
                   android:layout_gravity="center"
                   android:gravity="center"
                   app:neumorph_backgroundColor="@color/yellow"
                   android:clickable="true"
                   android:focusable="true"
                   android:textStyle="italic|bold"/>

            <soup.neumorphism.NeumorphButton
                style="@style/Widget.Neumorph.Button"
                android:id="@+id/firstPageSignUpBtn"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/btncolour"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/first_page_signUp_btn"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstPageLoginBtn"
                app:layout_constraintVertical_bias="0.245"
                app:neumorph_backgroundColor="@color/yellow"
                app:neumorph_shadowColorDark="@color/black"
                app:neumorph_shadowColorLight="@color/neo_white" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>